# fluvio-smart-engine-wasmedge

./: Cargo.toml  README.md  fluvio_smartmodule_filter.wasm  fluvio_smartmodule_filter_init.wasm  fluvio_wasm_filter_odd.wasm  fluvio_wasm_filter_regex.wasm  fluvio_wasm_filter_with_parameters_v1.wasm  json_filter.wasm
src/: engine.rs  fixture.rs  init.rs  instance.rs  lib.rs  main.rs  memory.rs
src/transforms/: filter.rs  mod.rs
