[package]
name = "fluvio-smart-engine-wasmedge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
engine = ["wasmedge-sdk", "wasmedge-types"]
transformation = ["serde_json", "serde_yaml"]
default = ["engine"]

[dependencies]
anyhow = "1.0.68"
cfg-if = "1.0.0"
derive_builder = "0.12.0"
fluvio-future = "0.4.5"
fluvio-protocol = "0.8.3"
fluvio-smartmodule = "0.3.1"
serde = "1.0.152"
serde_json = { version = "1.0.91", optional = true} 
serde_yaml = { version = "0.9.17", optional = true } 
thiserror = "1.0.38"
tracing = "0.1.37"
wasmedge-sdk = { git = "https://github.com/WasmEdge/WasmEdge", branch = "master",optional=true }
wasmedge-types = { version = "0.3.1", optional = true } 

[dev-dependencies]
fluvio-types = "0.4.0"
