[package]
name = "fluvio-smart-engine-wasmedge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
engine = ["wasmedge-sdk"]
default = ["engine"]

[dependencies]
anyhow = "1.0.68"
cfg-if = "1.0.0"
fluvio-future = "0.4.5"
fluvio-protocol = "0.8.3"
fluvio-smartmodule = "0.3.1"
wasmedge-sdk = { git = "https://github.com/WasmEdge/WasmEdge", branch = "master",optional=true }

[dev-dependencies]
fluvio-types = "0.4.0"
